[B]Retrospect v5.5.6 - Changelog - 2022-xx-xx[/B]

T.B.D.

[B]Framework related[/B]
* Fixed: Make the season/episode setting a bit more rigid (See #1638).

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: Some VTT subtitles have guids (with hyphens) as lines (Fixes #1635).
* Fixed: Vier.be broke if no episode number was present (Fixes #1638).