@@ -15,15 +15,11 @@ class TestKetNetChannel(ChannelTest):
         items = self.channel.process_folder_list(None)
         self.assertGreater(len(items), 10)
 
-    def test_swimlane(self):
-        items = self.channel.process_folder_list(None)
+    def test_sub_listing(self):
+        url = "https://senior-bff.ketnet.be/graphql?query=query%20GetPage%28%24id%3A%20String%21%29%20%7B%20page%28id%3A%20%24id%29%20%7B%20...%20on%20Program%20%7B%20pageType%20...program%20__typename%20%7D%20...%20on%20Video%20%7B%20pageType%20...video%20__typename%20%7D%20...%20on%20Pagecontent%20%7B%20pageType%20...pagecontent%20__typename%20%7D%20__typename%20%7D%20%7D%20%20fragment%20program%20on%20Program%20%7B%20id%20title%20header%20%7B%20...header%20__typename%20%7D%20activeTab%20tabs%20%7B%20name%20title%20type%20playlists%20%7B%20...seasonOverviewTabItem%20__typename%20%7D%20pagecontent%20%7B%20...pagecontentItem%20__typename%20%7D%20__typename%20%7D%20__typename%20%7D%20%20fragment%20seasonOverviewTabItem%20on%20Playlist%20%7B%20name%20title%20type%20imageUrl%20items%20%7B%20id%20titlePlaylist%20subtitlePlaylist%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20allowedRegion%20duration%20episodeNr%20seasonTitle%20imageUrl%20availableUntilDate%20publicationDate%20description%20__typename%20%7D%20__typename%20%7D%20%20fragment%20video%20on%20Video%20%7B%20id%20videoType%20titleVideodetail%20subtitleVideodetail%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20description%20availableUntilDate%20publicationDate%20duration%20episodeNr%20vrtPlayer%20%7B%20...vrtPlayerFragment%20__typename%20%7D%20suggestions%20%7B%20id%20titleSuggestion%20subtitleSuggestion%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20__typename%20%7D%20playlists%20%7B%20name%20title%20items%20%7B%20id%20titlePlaylist%20subtitlePlaylist%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20description%20__typename%20%7D%20__typename%20%7D%20activePlaylist%20trackingData%20%7B%20programName%20seasonName%20episodeName%20episodeNr%20episodeBroadcastDate%20__typename%20%7D%20__typename%20%7D%20%20fragment%20pagecontent%20on%20Pagecontent%20%7B%20pagecontent%20%7B%20...pagecontentItem%20__typename%20%7D%20__typename%20%7D%20%20fragment%20pagecontentItem%20on%20PagecontentItem%20%7B%20...%20on%20Header%20%7B%20...header%20__typename%20%7D%20...%20on%20Highlight%20%7B%20...highlight%20__typename%20%7D%20...%20on%20Swimlane%20%7B%20...swimlane%20__typename%20%7D%20__typename%20%7D%20%20fragment%20highlight%20on%20Highlight%20%7B%20type%20title%20description%20link%20linkItem%20%7B%20...%20on%20Game%20%7B%20id%20__typename%20%7D%20...%20on%20Program%20%7B%20id%20__typename%20%7D%20...%20on%20Story%20%7B%20id%20__typename%20%7D%20...%20on%20Theme%20%7B%20id%20__typename%20%7D%20...%20on%20Video%20%7B%20id%20__typename%20%7D%20__typename%20%7D%20buttonText%20imageUrl%20size%20__typename%20%7D%20%20fragment%20swimlane%20on%20Swimlane%20%7B%20id%20type%20title%20style%20items%20%7B%20...%20on%20Video%20%7B%20...swimlaneVideo%20__typename%20%7D%20...%20on%20Program%20%7B%20...swimlaneProgram%20__typename%20%7D%20__typename%20%7D%20__typename%20%7D%20%20fragment%20swimlaneVideo%20on%20Video%20%7B%20id%20type%20title%20imageUrl%20titleSwimlane%20subtitleSwimlane%20duration%20__typename%20%7D%20%20fragment%20swimlaneProgram%20on%20Program%20%7B%20id%20type%20title%20accentColor%20imageUrl%20logoUrl%20posterUrl%20__typename%20%7D%20%20fragment%20scaledImage%20on%20ScaledImage%20%7B%20small%20medium%20large%20__typename%20%7D%20%20fragment%20vrtPlayerFragment%20on%20VrtPlayerConfig%20%7B%20mediaReference%20aggregatorUrl%20clientCode%20__typename%20%7D%20%20fragment%20header%20on%20Header%20%7B%20type%20title%20description%20imageUrl%20logoUrl%20__typename%20%7D&variables=%7B%22id%22%3A%20%22content/ketnet/nl/kijken/d/de-hoppers.model.json%22%7D"
+        items = self._test_folder_url(url, expected_results=2)
+        items = self.channel.process_folder_list(items[0])
         self.assertGreater(len(items), 10)
-        items = self.channel.process_folder_list(items[5])
-        self.assertGreater(len(items), 10)
-
-    def test_program_list(self):
-        url = "https://senior-bff.ketnet.be/graphql?query=query%20GetPage%28%24id%3A%20String%21%29%20%7B%20page%28id%3A%20%24id%29%20%7B%20...%20on%20Program%20%7B%20pageType%20...program%20__typename%20%7D%20...%20on%20Video%20%7B%20pageType%20...video%20__typename%20%7D%20...%20on%20Pagecontent%20%7B%20pageType%20...pagecontent%20__typename%20%7D%20__typename%20%7D%20%7D%20%20fragment%20program%20on%20Program%20%7B%20id%20title%20header%20%7B%20...header%20__typename%20%7D%20activeTab%20tabs%20%7B%20name%20title%20type%20playlists%20%7B%20...seasonOverviewTabItem%20__typename%20%7D%20pagecontent%20%7B%20...pagecontentItem%20__typename%20%7D%20__typename%20%7D%20__typename%20%7D%20%20fragment%20seasonOverviewTabItem%20on%20Playlist%20%7B%20name%20title%20type%20imageUrl%20items%20%7B%20id%20titlePlaylist%20subtitlePlaylist%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20allowedRegion%20duration%20episodeNr%20seasonTitle%20imageUrl%20availableUntilDate%20publicationDate%20description%20__typename%20%7D%20__typename%20%7D%20%20fragment%20video%20on%20Video%20%7B%20id%20videoType%20titleVideodetail%20subtitleVideodetail%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20description%20availableUntilDate%20publicationDate%20duration%20episodeNr%20vrtPlayer%20%7B%20...vrtPlayerFragment%20__typename%20%7D%20suggestions%20%7B%20id%20titleSuggestion%20subtitleSuggestion%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20__typename%20%7D%20playlists%20%7B%20name%20title%20items%20%7B%20id%20titlePlaylist%20subtitlePlaylist%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20description%20__typename%20%7D%20__typename%20%7D%20activePlaylist%20trackingData%20%7B%20programName%20seasonName%20episodeName%20episodeNr%20episodeBroadcastDate%20__typename%20%7D%20__typename%20%7D%20%20fragment%20pagecontent%20on%20Pagecontent%20%7B%20pagecontent%20%7B%20...pagecontentItem%20__typename%20%7D%20__typename%20%7D%20%20fragment%20pagecontentItem%20on%20PagecontentItem%20%7B%20...%20on%20Header%20%7B%20...header%20__typename%20%7D%20...%20on%20Highlight%20%7B%20...highlight%20__typename%20%7D%20...%20on%20Swimlane%20%7B%20...swimlane%20__typename%20%7D%20__typename%20%7D%20%20fragment%20highlight%20on%20Highlight%20%7B%20type%20title%20description%20link%20linkItem%20%7B%20...%20on%20Game%20%7B%20id%20__typename%20%7D%20...%20on%20Program%20%7B%20id%20__typename%20%7D%20...%20on%20Story%20%7B%20id%20__typename%20%7D%20...%20on%20Theme%20%7B%20id%20__typename%20%7D%20...%20on%20Video%20%7B%20id%20__typename%20%7D%20__typename%20%7D%20buttonText%20imageUrl%20size%20__typename%20%7D%20%20fragment%20swimlane%20on%20Swimlane%20%7B%20id%20type%20title%20style%20items%20%7B%20...%20on%20Video%20%7B%20...swimlaneVideo%20__typename%20%7D%20...%20on%20Program%20%7B%20...swimlaneProgram%20__typename%20%7D%20__typename%20%7D%20__typename%20%7D%20%20fragment%20swimlaneVideo%20on%20Video%20%7B%20id%20type%20title%20imageUrl%20titleSwimlane%20subtitleSwimlane%20duration%20__typename%20%7D%20%20fragment%20swimlaneProgram%20on%20Program%20%7B%20id%20type%20title%20accentColor%20imageUrl%20logoUrl%20posterUrl%20__typename%20%7D%20%20fragment%20scaledImage%20on%20ScaledImage%20%7B%20small%20medium%20large%20__typename%20%7D%20%20fragment%20vrtPlayerFragment%20on%20VrtPlayerConfig%20%7B%20mediaReference%20aggregatorUrl%20clientCode%20__typename%20%7D%20%20fragment%20header%20on%20Header%20%7B%20type%20title%20description%20imageUrl%20logoUrl%20__typename%20%7D&variables=%7B%22id%22%3A%20%22content/ketnet/nl/kijken/-/kotnet.model.json%22%7D"
-        self._test_folder_url(url, expected_results=5)
 
     def test_video(self):
         url = "https://senior-bff.ketnet.be/graphql?query=query%20GetPage%28%24id%3A%20String%21%29%20%7B%20page%28id%3A%20%24id%29%20%7B%20...%20on%20Program%20%7B%20pageType%20...program%20__typename%20%7D%20...%20on%20Video%20%7B%20pageType%20...video%20__typename%20%7D%20...%20on%20Pagecontent%20%7B%20pageType%20...pagecontent%20__typename%20%7D%20__typename%20%7D%20%7D%20%20fragment%20program%20on%20Program%20%7B%20id%20title%20header%20%7B%20...header%20__typename%20%7D%20activeTab%20tabs%20%7B%20name%20title%20type%20playlists%20%7B%20...seasonOverviewTabItem%20__typename%20%7D%20pagecontent%20%7B%20...pagecontentItem%20__typename%20%7D%20__typename%20%7D%20__typename%20%7D%20%20fragment%20seasonOverviewTabItem%20on%20Playlist%20%7B%20name%20title%20type%20imageUrl%20items%20%7B%20id%20titlePlaylist%20subtitlePlaylist%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20allowedRegion%20duration%20episodeNr%20seasonTitle%20imageUrl%20availableUntilDate%20publicationDate%20description%20__typename%20%7D%20__typename%20%7D%20%20fragment%20video%20on%20Video%20%7B%20id%20videoType%20titleVideodetail%20subtitleVideodetail%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20description%20availableUntilDate%20publicationDate%20duration%20episodeNr%20vrtPlayer%20%7B%20...vrtPlayerFragment%20__typename%20%7D%20suggestions%20%7B%20id%20titleSuggestion%20subtitleSuggestion%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20__typename%20%7D%20playlists%20%7B%20name%20title%20items%20%7B%20id%20titlePlaylist%20subtitlePlaylist%20scaledPoster%20%7B%20...scaledImage%20__typename%20%7D%20description%20__typename%20%7D%20__typename%20%7D%20activePlaylist%20trackingData%20%7B%20programName%20seasonName%20episodeName%20episodeNr%20episodeBroadcastDate%20__typename%20%7D%20__typename%20%7D%20%20fragment%20pagecontent%20on%20Pagecontent%20%7B%20pagecontent%20%7B%20...pagecontentItem%20__typename%20%7D%20__typename%20%7D%20%20fragment%20pagecontentItem%20on%20PagecontentItem%20%7B%20...%20on%20Header%20%7B%20...header%20__typename%20%7D%20...%20on%20Highlight%20%7B%20...highlight%20__typename%20%7D%20...%20on%20Swimlane%20%7B%20...swimlane%20__typename%20%7D%20__typename%20%7D%20%20fragment%20highlight%20on%20Highlight%20%7B%20type%20title%20description%20link%20linkItem%20%7B%20...%20on%20Game%20%7B%20id%20__typename%20%7D%20...%20on%20Program%20%7B%20id%20__typename%20%7D%20...%20on%20Story%20%7B%20id%20__typename%20%7D%20...%20on%20Theme%20%7B%20id%20__typename%20%7D%20...%20on%20Video%20%7B%20id%20__typename%20%7D%20__typename%20%7D%20buttonText%20imageUrl%20size%20__typename%20%7D%20%20fragment%20swimlane%20on%20Swimlane%20%7B%20id%20type%20title%20style%20items%20%7B%20...%20on%20Video%20%7B%20...swimlaneVideo%20__typename%20%7D%20...%20on%20Program%20%7B%20...swimlaneProgram%20__typename%20%7D%20__typename%20%7D%20__typename%20%7D%20%20fragment%20swimlaneVideo%20on%20Video%20%7B%20id%20type%20title%20imageUrl%20titleSwimlane%20subtitleSwimlane%20duration%20__typename%20%7D%20%20fragment%20swimlaneProgram%20on%20Program%20%7B%20id%20type%20title%20accentColor%20imageUrl%20logoUrl%20posterUrl%20__typename%20%7D%20%20fragment%20scaledImage%20on%20ScaledImage%20%7B%20small%20medium%20large%20__typename%20%7D%20%20fragment%20vrtPlayerFragment%20on%20VrtPlayerConfig%20%7B%20mediaReference%20aggregatorUrl%20clientCode%20__typename%20%7D%20%20fragment%20header%20on%20Header%20%7B%20type%20title%20description%20imageUrl%20logoUrl%20__typename%20%7D&variables=%7B%22id%22%3A%20%22content/ketnet/nl/kijken/k/ket-doc/2/vragen-ga-naar-awel-be.model.json%22%7D"
